// Jest Snapshot v1, https://goo.gl/fbAQLP

exports['OtherRecommendation Tests should match the snapshot when the recommandation is active 1'] = `
<OtherRecommendation
  dispatch={[Function]}
  language="en"
  onChangeActive={[Function]}
  onChangeRecTitle={[Function]}
  onChangeValue={[Function]}
  recActive={true}
  recTitle="Recommandation title"
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
  storeSubscription={
    Subscription {
      "listeners": Object {
        "clear": [Function],
        "get": [Function],
        "notify": [Function],
        "subscribe": [Function],
      },
      "onStateChange": [Function],
      "parentSub": undefined,
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "unsubscribe": [Function],
    }
  }
  title="Recommandation value"
  value={0}
/>
`;

exports['OtherRecommendation Tests should match the snapshot when the recommandation is inactive 1'] = `
<OtherRecommendation
  dispatch={[Function]}
  language="en"
  recActive={false}
  recTitle="Recommandation title"
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
  storeSubscription={
    Subscription {
      "listeners": Object {
        "clear": [Function],
        "get": [Function],
        "notify": [Function],
        "subscribe": [Function],
      },
      "onStateChange": [Function],
      "parentSub": undefined,
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "unsubscribe": [Function],
    }
  }
  title="Recommandation value"
  value={0}
/>
`;
